feat: Implement Community and Category management features
- Added CommunityController to handle community-related API requests.
- Created Community and Category domain models with appropriate validations.
- Developed DTOs for creating and responding to community and category requests.
- Implemented repositories for Community and Category with custom queries.
- Introduced services for managing community and category logic, including creation, updates, and subscriptions.
- Added UUIDv7 generator for unique identifiers.
- Created database migration scripts for categories and community-category relationships.
- Implemented caching and metrics for performance optimization.